<resources>
    <string name="app_name">Online Shopping Admin</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="orders">Orders</string>
    <string name="finance">Finance</string>
    <string name="clients">Clients</string>
    <string name="products">Products</string>
    <string name="branches">Branches</string>
    <string name="drivers">Drivers</string>
    <string name="order_value">Order value</string>
    <string name="order_status">Order status</string>
    <string name="filter">Filter</string>
    <string name="choose_date">Choose date</string>
    <string name="type">Type</string>
    <string name="all">All</string>
    <string name="simple">Simple</string>
    <string name="delivery">Delivery</string>
    <string name="status">Status</string>
    <string name="ordered">Ordered</string>
    <string name="confirmed">Confirmed</string>
    <string name="on_the_way">On the way</string>
    <string name="delivered">Delivered</string>
    <string name="search_for_orders">Search for orders</string>
    <string name="search_client">Search for clients</string>
    <string name="search_drivers">Search for drivers</string>
    <string name="search_products">Search for products</string>
    <string name="cancel">Cancel</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="add_product">Add product</string>

    <string name="fine_permission_denied_explanation">And the resolution and determination of the exact location of the site was rejected, because it is not necessary for the basic function.</string>
    <string name="permission_approved_explanation">You\'ve approved the FINE layout, go ahead (and click) on!</string>
    <string name="enable_location">Enable location</string>
    <string name="location_settings">Turn on</string>
    <string name="enable_location_message">GPS is disabled. Please enable geolocation</string>

    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="message">Message</string>
    <string name="success">Success</string>
    <string name="address">Address</string>
    <string name="way">Way(to find it easier)</string>
    <string name="phone">Phone</string>
    <string name="schedule_time">Schedule time(10:00 – 23:00)</string>
    <string name="add_branch">Add branch</string>
    <string name="nukus">Nukus</string>
    <string name="delete_driver">Do you want to delete this driver?</string>
    <string name="add_driver">Add driver</string>
    <string name="add_category">Add category</string>

</resources>