<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/action_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_left"
        app:title="Add driver"
        app:titleCentered="true" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="@dimen/margin_std"
        android:layout_marginTop="@dimen/margin_std"
        android:background="@drawable/bg_products_list_item"
        android:drawableStart="@drawable/ic_paper"
        android:drawablePadding="@dimen/margin_nrl"
        android:hint="@string/name"
        android:padding="@dimen/margin_std"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar_container" />






    <com.vicmikhailau.maskededittext.MaskedEditText
        android:id="@+id/input_phone"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="@dimen/margin_std"
        android:layout_marginTop="@dimen/margin_std"
        android:background="@drawable/bg_products_list_item"
        android:drawableStart="@drawable/ic_call"
        android:drawablePadding="@dimen/margin_nrl"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="@dimen/margin_std"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_name"
        app:mask="+998 ## ### ## ##" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="@dimen/margin_std"
        android:layout_marginTop="@dimen/margin_std"
        android:background="@drawable/bg_products_list_item"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/margin_nrl"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:padding="@dimen/margin_std"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_phone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_driver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_std"
        android:background="@drawable/bg_app_btn"
        android:fontFamily="@font/sf_pro_semi_bold"
        android:text="@string/add_driver"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>